# super_cafe

./: .gitignore  CLAUDE.md  LICENSE  README.md  best_caafe_features.py  caafe_cache_0a2ddb86.json  caafe_cache_3ec1ad90.json  caafe_cache_e8989872.json  pyproject.toml  real_datasets.py  test_leakage_fixes.py
examples/: ctv_churn_example.py  simple_example.py  titanic_example.py
examples/.caafe_cache/: features_870b2c45c25b.json
experiments/: get_openml_challenging.py  get_real_challenging_datasets.py
src/caafe/: __init__.py  core.py  critic.py  evaluation.py  feature_cache.py  feature_loop.py  llm_interface.py  manifest.py  sandbox.py  streamlined_core.py  subset.py
