[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caafe"
version = "2.0.0"
description = "CAAFE: Context-Aware Automated Feature Engineering with LLMs"
authors = [{name = "CAAFE Contributors", email = "maintainers@caafe.org"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["machine learning", "feature engineering", "automated ml", "llm", "xgboost"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
gemini = [
    "google-generativeai>=0.3.0",
]
anthropic = [
    "anthropic>=0.25.0",
]
ollama = [
    "ollama>=0.1.0",
]
all = [
    "openai>=1.0.0",
    "google-generativeai>=0.3.0", 
    "anthropic>=0.25.0",
    "ollama>=0.1.0",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
    "jupyter>=1.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/caafe-ai/caafe"
Repository = "https://github.com/caafe-ai/caafe"
Documentation = "https://github.com/caafe-ai/caafe#readme"
"Bug Tracker" = "https://github.com/caafe-ai/caafe/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "ISC", "PIE", "T20", "SIM", "ARG", "ERA", "PL", "RUF"]
ignore = ["E501", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"